Added pocket directory

--- a/pocket/index.html
+++ b/pocket/index.html
@@ -42,7 +42,7 @@
         </li>
 
         <li>
-          <img src="http://placehold.it/320x100&text=FLORIAN" />
+          <img src="http://placehold.it/320x100&text=FLO" />
         </li>
 
         <li>
