Avatars added. Rudimentary Raphaël setup.

--- a/monitor/index.html
+++ b/monitor/index.html
@@ -8,7 +8,7 @@
 	<body>
 
 		<section id="canvasContainer">
-			<canvas id="mainCanvas" width="1024" height="768"></canvas>
+			<div id="mainCanvas"></div>
 		</section>
 
 		<footer>
@@ -16,7 +16,7 @@
 		</footer>
 
 		<script src="js/jquery-1.7.2.min.js" type="text/javascript"></script>
-		<script src="js/paper.js" type="text/javascript"></script>
+		<script src="js/raphael.min.js" type="text/javascript"></script>
 		<script src="js/socket.io.min.js" type="text/javascript"></script>
 		<script src="js/script.js" type="text/javascript"></script>
 	
