--- a/monitor/index.html
+++ b/monitor/index.html
@@ -2,7 +2,8 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>INHABIT Monitor</title>
+		<title>INHABITor</title>
+		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<link rel="stylesheet" href="css/style.css" />
 	</head>
 	<body>
@@ -12,7 +13,8 @@
 		</section>
 
 		<footer>
-			<p>made with real <strong>blargh</strong>, for a smarter tomorrow</p>
+			<p><span>IN</span>HABIT</p>
+			<p>made with real <strong>blargh</strong>, for a <em>smarter</em> tomorrow</p>
 		</footer>
 
 		<script src="js/jquery-1.7.2.min.js" type="text/javascript"></script>
