--- a/test/index.html
+++ b/test/index.html
@@ -12,7 +12,7 @@
         <script>
             var config = {
                 // change this dependent on where the socket server is running i.e. 192.168.0.2
-                socketServer: 'localhost'
+                socketServer: '192.168.0.2'
             };
         </script>
 
