Lines chasing eatch other.

--- a/monitor/index.html
+++ b/monitor/index.html
@@ -14,7 +14,7 @@
 
 		<footer>
 			<p><span>IN</span>HABIT</p>
-			<p>made with real <strong>blargh</strong>, for a <em>smarter</em> tomorrow</p>
+			<p>made with real <strong>MQTT</strong>, for a <em>smarter</em> tomorrow</p>
 		</footer>
 
 		<script src="js/jquery-1.7.2.min.js" type="text/javascript"></script>
